<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="@dimen/default_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/albums"
        android:layout_weight="1"
        style="@style/MainMenuStyle"
        android:text="@string/category_albums"
        android:textSize="@dimen/font_size_xl"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/artists"
        android:layout_weight="1"
        style="@style/MainMenuStyle"
        android:text="@string/category_artists"
        android:textSize="@dimen/font_size_xl"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/songs"
        android:layout_weight="1"
        style="@style/MainMenuStyle"
        android:text="@string/category_songs"
        android:textSize="@dimen/font_size_xl"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/playlists"
        android:layout_weight="1"
        style="@style/MainMenuStyle"
        android:text="@string/category_playlists"
        android:textSize="@dimen/font_size_xl"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/play"
        android:layout_weight="1"
        style="@style/MainMenuStyle"
        android:text="@string/category_play"
        android:textSize="@dimen/font_size_xl"
        android:textAlignment="center"/>

</LinearLayout>
